--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-tippy": "^1.4.0",
     "react-wow": "^1.0.0",
     "swiper": "^11.1.3",
